# FashionStylist

./: .gitignore  LICENSE  README.md
Benchamark/Task3/: download.py  gemini_eval.py  task3_dataset.py
Benchmark/Task1/: .gitignore  README.md  environment.yml  pyproject.toml
Benchmark/Task1/configs/: accelerate_single_gpu.yaml  accelerate_zero2_longcat.yaml  accelerate_zero2offload_qwen_diffsynth.yaml
Benchmark/Task1/examples/: train_manifest.example.jsonl
Benchmark/Task1/hf_datasets/flux_kontext_manifest/: flux_kontext_manifest.py
Benchmark/Task1/requirements/: base.txt  train.txt
Benchmark/Task1/scripts/: enrich_manifest.py  eval_outputs.py  infer.py  prepare_dataset.py  setup_env.sh  train_flux_kontext.py  train_longcat_edit.py  train_qwen_edit.py
Benchmark/Task1/src/task1_image_edit/: __init__.py  io.py  prompts.py  raw_dataset.py  runtime.py
Benchmark/Task1/src/task1_image_edit/datasets/: longcat_edit.py  qwen_edit_diffsynth.py
Benchmark/Task1/src/task1_image_edit/models/: __init__.py  base.py  flux_kontext.py  longcat_edit.py  qwen_edit.py
Benchmark/Task1/src/task1_image_edit/trainers/: __init__.py  common.py
Benchmark/Task2/: POG.py  README.md  requirements.txt
Benchmark/Task3/: README.md  mllm_eval.py  requirements.mllm_eval.txt  requirements.sft_unsloth.txt  sft_unsloth.py
Dataset/Child/: label(p1-841).csv  label_en.csv  look(b1-200).csv  look_en.csv
Dataset/Female/: label(p1-2406).csv  label_en.csv  look(b1-500).csv  look_en.csv
Dataset/Male/: label_en.csv  look_en.csv
Male/: label(p1-1390).csv  look(b1-300).csv
(+2 files in other folders)
